--- a/redemption.css
+++ b/redemption.css
@@ -46,4 +46,20 @@ p{
   a {
     border: 1px solid black;
   }
+
+  div.gallery {
+    margin: 5px;
+    border: 1px solid #ccc;
+    float: left;
+    width: 180px;
+  }
+  
+  div.gallery:hover {
+    border: 1px solid #777;
+  }
+  
+  div.gallery img {
+    width: 100%;
+    height: auto;
+  }
   
