--- a/style.css
+++ b/style.css
@@ -18,6 +18,22 @@ body{
   margin:0
 }
 
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  height:70px;
+  width: 100%;
+  background-color: #F74343;
+  text-align: center;
+  border: 1px solid #000000;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
+  display:flex;
+  flex-direction: row-reverse;
+  margin:0
+}
+
 .button{
   width: 13%;
   border: 1px solid #000000;
@@ -44,6 +60,25 @@ line-height: 31px;
 text-align: center;
 padding: 15px;
 border: 1px solid #000000;
+}
+
+
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 5px;
+}
+
+/* Clearfix (clear floats) */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+p.text{
+  margin-right: 150px;
+  margin-left: 150px;
 }
 
 h1.heading{
