--- a/style.css
+++ b/style.css
@@ -18,21 +18,16 @@ body{
   margin:0
 }
 
-.footer {
+/* .footer {
   position: fixed;
   left: 0;
   bottom: 0;
-  height:70px;
+  width: 100%;
+  height:6%;
   width: 100%;
   background-color: #F74343;
-  text-align: center;
   border: 1px solid #000000;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-
-  display:flex;
-  flex-direction: row-reverse;
-  margin:0
-}
+} */
 
 .button{
   width: 13%;
