--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ body{
 }
 
 .footer {
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   position: fixed;
   left: 0;
   bottom: 0;
@@ -32,6 +33,7 @@ body{
   display:flex;
   flex-direction: row-reverse;
   margin:0
+  position: relative;
 }
 
 .button{
@@ -82,9 +84,18 @@ p.text{
 }
 
 h1.heading{
-  text-align:center
+  text-align:center;
 }
 
 h2.subheading{
-  text-align:center
+  text-align:center;
+}
+
+.homeright{
+  float:right;
+  margin-right: 150px;
+}
+.homeleft{
+  float:left;
+  margin-left: 150px;
 }
