--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body{
 .header{
   height:70px;
   width: 100%;
-  background-color: #F74343;
+  background-color: rgb(130, 180, 209);
   border: 1px solid #000000;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
@@ -25,7 +25,7 @@ body{
   bottom: 0;
   height:70px;
   width: 100%;
-  background-color: #F74343;
+  background-color: rgb(71, 78, 136);
   text-align: center;
   border: 1px solid #000000;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -36,25 +36,30 @@ body{
   position: relative;
 }
 
+body.back{
+  background-color: lightgray;
+}
+
 .button{
   width: 13%;
   border: 1px solid #000000;
   text-align: center;
-  font-family: Merriweather;
 font-style: normal;
 font-weight: normal;
 font-size: 20px;
 line-height: 23px;
 padding: 20px 0;
+font-family: "Palatino Linotype";
+
 }
 
 .button:hover{
-  background-color: rgb(247, 35, 35);
+  background-color: rgb(132, 168, 189);
 }
 
 .redemption{
   width:35%;
-  font-family: Merriweather;
+  font-family: "Palatino Linotype";
 font-style: normal;
 font-weight: normal;
 font-size: 30px;
@@ -70,6 +75,10 @@ border: 1px solid #000000;
   width: 33.33%;
   padding: 5px;
 }
+.columnextra {
+  float: left;
+  width: 33.33%;
+}
 
 /* Clearfix (clear floats) */
 .row::after {
@@ -81,21 +90,35 @@ border: 1px solid #000000;
 p.text{
   margin-right: 150px;
   margin-left: 150px;
+  margin-bottom: 75px;
+  color: rgb(85, 85, 88);
+  font-family: "Palatino Linotype";
+
 }
 
 h1.heading{
   text-align:center;
+  margin-top:75px;
+  color: rgb(92, 92, 92);
+  font-family: "Palatino Linotype";
 }
 
 h2.subheading{
   text-align:center;
+  color: rgb(92, 92, 92);
+  font-family: "Palatino Linotype";
+
 }
 
 .homeright{
   float:right;
-  margin-right: 150px;
+  margin-right: 250px;
 }
 .homeleft{
   float:left;
+  margin-left: 250px;
+}
+ul{
+  margin-top: 85px;
   margin-left: 150px;
 }
