--- a/style.css
+++ b/style.css
@@ -12,10 +12,11 @@ body{
   background-color: #F74343;
   border: 1px solid #000000;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-
+  position: fixed;
   display:flex;
   flex-direction: row-reverse;
   margin:0
+  top:0;
 }
 
 /* .footer {
