--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@ body{
   height:70px;
   width: 100%;
   background-color: rgb(130, 180, 209);
-  border: 1px solid #000000;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border: 1px solid #616161;
+  box-shadow: 0px 4px 4px rgba(116, 114, 114, 0.25);
 
   display:flex;
   flex-direction: row-reverse;
@@ -19,7 +19,7 @@ body{
 }
 
 .footer {
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 2px 2px rgba(104, 103, 103, 0.25);
   position: fixed;
   left: 0;
   bottom: 0;
@@ -27,8 +27,8 @@ body{
   width: 100%;
   background-color: rgb(71, 78, 136);
   text-align: center;
-  border: 1px solid #000000;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border: .1px solid #555555;
+  box-shadow: 0px 1px 1px rgba(129, 128, 128, 0.25);
 
   display:flex;
   flex-direction: row-reverse;
@@ -42,7 +42,7 @@ body.back{
 
 .button{
   width: 13%;
-  border: 1px solid #000000;
+  border: .025px solid #747474;
   text-align: center;
 font-style: normal;
 font-weight: normal;
@@ -66,7 +66,7 @@ font-size: 30px;
 line-height: 31px;
 text-align: center;
 padding: 15px;
-border: 1px solid #000000;
+border: 1px solid #646262;
 }
 
 
