--- a/style.css
+++ b/style.css
@@ -13,10 +13,14 @@ body{
   border: 1px solid #000000;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 999;
+  width: 100%;
   display:flex;
   flex-direction: row-reverse;
   margin:0
-  top:0;
+  
 }
 
 .footer {
@@ -123,4 +127,17 @@ h2.subheading{
 ul{
   margin-top: 85px;
   margin-left: 150px;
+}
+.top{
+  height: 70px;
+}
+.ourmission_container{
+  display: flex;
+  flex-direction: row;
+  align-items: center
+  justify-content: space-around;
+}
+.ashley{
+  width:500px;
+  height:300px;
 }
