--- a/style.css
+++ b/style.css
@@ -23,6 +23,30 @@ body{
   
 }
 
+.first {
+  width: 42%;
+  float: left;
+  height: 300px;
+  background-color:  rgb(130, 180, 209);
+  border: 5px solid #000000;
+
+  margin-left: 50px;
+  margin-right: 50px;
+
+}
+.second {
+  width: 42%;
+  float: left;
+  height: 300px;
+  background-color:  rgb(130, 180, 209);
+  border: 5px solid #000000;
+
+  margin-right: 50px;
+  margin-left: 50px;
+
+  margin-bottom:100px;
+}
+
 .footer {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   position: fixed;
